# api/route.go
@@ -3,6 +3,7 @@ package api
 import (
 	"time"
 
+	"github.com/chencheng8888/GoDo/auth"
 	"github.com/chencheng8888/GoDo/controller"
 	ginzap "github.com/gin-contrib/zap"
 	"github.com/gin-gonic/gin"
@@ -21,7 +22,7 @@ func (f RouteInitFunc) InitRoute(r *gin.Engine) {
 	f(r)
 }
 
-func NewGinEngine(taskController *controller.TaskController, userController *controller.UserController, logger *zap.SugaredLogger) *gin.Engine {
+func NewGinEngine(taskController *controller.TaskController, userController *controller.UserController, auth *auth.Auth, logger *zap.SugaredLogger) *gin.Engine {
 	r := gin.New()
 	r.Use(ginzap.Ginzap(logger.Desugar(), time.RFC3339, true))
 	r.Use(ginzap.RecoveryWithZap(logger.Desugar(), true))
@@ -29,7 +30,7 @@ func NewGinEngine(taskController *controller.TaskController, userController *con
 	// Swagger文档路由
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 	
-	InitRoutes(r, InitTaskRoute(taskController), InitUserRoute(userController))
+	InitRoutes(r, InitTaskRoute(taskController, auth), InitUserRoute(userController))
 	return r
 }
 
@@ -39,11 +40,13 @@ func InitRoutes(r *gin.Engine, initer ...RouteIniter) {
 	}
 }
 
-func InitTaskRoute(taskController *controller.TaskController) RouteIniter {
+func InitTaskRoute(taskController *controller.TaskController, auth *auth.Auth) RouteIniter {
 	return RouteInitFunc(func(r *gin.Engine) {
 		g := r.Group("/api/v1/tasks")
+		// 为所有任务路由添加JWT鉴权中间件
+		g.Use(auth.JWTAuthMiddleware())
 		{
-			g.GET("/list/:name", taskController.ListTasks)
+			g.GET("/list", taskController.ListTasks)
 			g.POST("/upload_script", taskController.UploadScript)
 			g.POST("/add_shell_task", taskController.AddShellTask)
 			g.DELETE("/delete", taskController.DeleteTask)
